use Number.valueOf() rather than new Number()
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@1044443 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 20a85c7b1f062ac10399c8f803ac374b4f0318a9